--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,10 @@ services:
 
   web:
     build:
-      context: ./client
-      dockerfile: Dockerfile.dev
+      context: /client
+      dockerfile: Dockerfile
     ports:
-      - "3000:5173"
-    volumes:
-      - ./client:/app
-      - /app/node_modules
+      - "3000:80"  # 80 в контейнере, 3000 для доступа снаружи
     depends_on:
       - server
 
