--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   web:
     build:
-      context: /client
+      context: ./client
       dockerfile: Dockerfile
     ports:
       - "3000:80"  # 80 в контейнере, 3000 для доступа снаружи
