--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "markdown-to-jsx": "^7.7.4",
     "mobx": "^6.13.6",
     "mobx-react": "^9.2.0",
     "react": "^19.0.0",
