--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,13 +3,18 @@ FROM node:20 AS build
 
 WORKDIR /app
 
-COPY . .
+COPY package.json package-lock.json ./
 
 RUN npm install
+
+COPY . .
+
 RUN npm run build
 
 # --- Стадия "production" ---
 FROM nginx:stable-alpine
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=build /app/dist /usr/share/nginx/html
 
