--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,13 @@ version: "3.9"
 
 services:
   server:
-    build: 
-      context: ./server
-      dockerfile: Dockerfile
-    restart: always
+    build: ./server
     volumes:
       - ./server:/app
     ports:
-      - "127.0.0.1:8000:8000"
+      - "8000:8000"
     depends_on:
-      db:
-        condition: service_healthy
-        restart: true
+      - db
     environment:
       - MONGO_URI=mongodb://db:27017/
       - DB_NAME=freelance_db
@@ -24,23 +19,16 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
-    restart: always
     ports:
-      - "127.0.0.1:3000:80"  # 80 в контейнере, 3000 для доступа снаружи
+      - "3000:80"  # 80 в контейнере, 3000 для доступа снаружи
     depends_on:
       - server
 
   db:
     image: mongo:8.0.5
     restart: always
-    healthcheck:
-      test: echo 'db.runCommand({serverStatus:1}).ok' | mongosh admin -u $MONGO_INITDB_ROOT_USERNAME -p $MONGO_INITDB_ROOT_PASSWORD --quiet | grep 1
-      interval: 5s
-      timeout: 5s
-      retries: 3
-      start_period: 5s
-    expose: 
-      - 27017
+    ports:
+      - "27017:27017"
     volumes:
       - mongo_data:/data/db
 
