--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
     "markdown-to-jsx": "^7.7.4",
     "mobx": "^6.13.6",
     "mobx-react": "^9.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5"
